Fix icon alignment in More expanded section
Use inline-flex column layout on open__icon so WhiteSur and FA icons
align consistently regardless of sizing method.

--- a/packages/core/app/styles/areas/_open.scss
+++ b/packages/core/app/styles/areas/_open.scss
@@ -25,6 +25,10 @@
 
     &__icon {
         @include icon-btn();
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
         color: var(--open-icon-color);
         padding-top: 0;
         margin: 0.2em 0.5em;
